<resources>
    <string name="app_name">MeasureConverter</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_in_all_the_fields_to_add_new_unit">Fill in all fields to create a new unit</string>
    <string name="add">ADD</string>
    <string name="Enter_result_here">Enter result here</string>
    <string name="enter_new_unit_shortname">Enter new unit shortname</string>
    <string name="enter_new_unit_name">Enter new unit name</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="degrees">Degrees</string>
    <string name="cancel">CANCEL</string>
    <string name="how_many_meters_in_one_unit">How many meters in one unit?</string>
    <string name="meters">meters</string>
    <string name="grams">grams</string>
    <string name="Enter_the_unit_name">Enter the unit name</string>
    <string name="Enter_the_unit_short_name">Enter the unit short name</string>
    <string name="Enter_data_for_calculating">Enter data for calculating</string>
    <string name="Deleting">Deleting</string>
    <string name="Do_you_really_want_to_delete_unit">Do you really want to delete unit</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Must_be_more_than_zero">Must be more than zero</string>
    <string name="How_many_unit_in_one_unit">How many %s in 1 unit?</string>
    <string name="Divide_your_unit_by_one">Divide your unit by 1 %s </string>
    <string name="reacrete_database_dialog_title">Do you really want to restore the default settings?</string>
    <string name="all_your_data_will_be_lost">All your data will be lost</string>

</resources>